# eopaudit1

./: README.md  pyproject.toml
docs/: README2.md  V7 Table of Contents.docx  V7.0 — EOP AUDIT THINKING CONTRACT.docx  V7.1 — REFERENCE & CONFIGURATION MODEL.docx  V7.2 — WORKED EXAMPLES & CANONICAL MAPPINGS.docx  V7.3 — CODEX & IMPLEMENTATION PLAYBOOK.docx
eopaudit/: __init__.py  app.py  models.py
eopaudit/pipeline/: ingestion.py  narrative.py  signals.py  situations.py  visibility.py
eopaudit/providers/: __init__.py  calendar.py  chart_of_accounts.py  identity.py  policy.py
sample_data/: transactions.json
