[project]
name = "eopaudit"
version = "0.1.0"
description = "EOP Audit application skeleton"
authors = [{name = "EOP Audit"}]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eopaudit*"]
